# nautilus

./: .gitignore  Makefile  README.md  pyproject.toml
nautilus/: __init__.py
nautilus/algos/dqn/: agent.py
nautilus/algos/ppo/: agent.py  config.py  losses.py
nautilus/algos/vpg/: agent.py
nautilus/configs/: lunarlander_ppo.yaml
nautilus/configs/algos/dqn/: cartpole.yaml
nautilus/core/: buffers.py  networks.py  on_policy.py  policy_optimizer_base.py  samplers.py
nautilus/envs/: api_compat.py
nautilus/runners/: ppo_runner.py  train_loop.py
nautilus/tests/: test_agent.py  test_buffers.py  test_collections.py  test_env_utils.py  test_logger.py  test_losses.py  test_lunarlander_env.py  test_math.py  test_networks.py  test_on_policy_buffer.py
nautilus/utils/: collections.py  envs.py  logger.py  seed.py
nautilus_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: colab_cartpole.ipynb
scripts/: benchmark_policy_gradient.py  train_dqn.py  train_ppo.py
wandb/: latest-run
wandb/run-20251118_162234-fc6g3un2/: run-fc6g3un2.wandb
wandb/run-20251118_162234-fc6g3un2/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251118_162234-fc6g3un2/files/code/nautilus/runners/: ppo_runner.py
wandb/run-20251118_162553-ljtl9e3q/: run-ljtl9e3q.wandb
wandb/run-20251118_162553-ljtl9e3q/files/: config.yaml  diff_2772e0c5188ac32c933ac9e1a59cc2cb97abaeb7.patch  requirements.txt  wandb-metadata.json  wandb-summary.json
