[build-system]
# Include swig so editable installs/build isolation have the binary available for Box2D builds.
requires = ["setuptools>=68", "wheel", "swig"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus-rl"
version = "0.1.0"
description = "RL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "gymnasium",
  "numpy",
  "tqdm",
  "tensorboard",
  "pydantic>=2",
  "wandb",
  "pygame",
  "matplotlib",
  "seaborn",
  "pandas"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pre-commit"]

envs = [
  "gymnasium",
  "box2d",
  "swig",
]

jax = [
  # Using the official PyPI package `jax` will install the CPU-only version.
  # Note: The JAX ecosystem often requires specific NumPy versions.
  # For the safest installation, users are often directed to use the official
  # JAX installation instructions/scripts, but this is the PyPI way:
  "jax[cpu]", # or simply "jax" (it defaults to CPU)
  "jaxlib",
  # Often required dependencies for JAX-based RL libraries
  "chex",
  "flax",
  "optax",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","SIM","PYI"]
lint.ignore = ["E203","E266","E501"]
format.preview = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["nautilus/tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["nautilus*"]
